hphp/hack/test/typecheck/refinements/inter_enum.php.rust_elab.exp
File "inter_enum.php", line 4, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "inter_enum.php", line 9, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "inter_enum.php", line 14, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
